fixed experiences and contact email on mobile

--- a/app/stylesheets/index.css
+++ b/app/stylesheets/index.css
@@ -415,7 +415,7 @@ section {
     text-align: center;
 }
 .card-center {
-    margin-top: 20px;
+    margin-top: 5px;
     margin-left: auto;
     margin-right: auto;
 }
